src/main/metadata/objects/Warranty__c.object
<CustomObject>
    <description>Contact Portfolio: To Record Customer Warranty Info.</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>/* 
Created by: Amy Liang 
Used by: Warranty 
Function: Person involved in the warranty contract
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <inlineHelpText>Person involved in the warranty contract</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Warranty</relationshipLabel>
        <relationshipName>Warranty</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>/* 
Created by: Amy Liang 
Used by: Warranty 
Function: The dealer involved in the warranty contract
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <inlineHelpText>The dealer involved in the warranty contract</inlineHelpText>
        <label>Dealer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Warranty (Dealer)</relationshipLabel>
        <relationshipName>Warranty1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>/*
Created by:  Chris.Huang
Used by:  Chris.Huang
Function:
Used in: Page Layouts, Reports 

Modify History
Modify By: 
Modify Reason: 
*/</description>
        <label>Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Warranty</relationshipLabel>
        <relationshipName>Warranty</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Warranty_End_Date__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Warranty 
Function: The manufacturer warranty end date
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <inlineHelpText>The manufacturer warranty end date</inlineHelpText>
        <label>Warranty End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Warranty_Extended_Period__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Warranty 
Function: The period of the extended warranty in months
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <inlineHelpText>The period of the extended warranty in months</inlineHelpText>
        <label>Warranty Extended Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Warranty_Extended_Start_Date__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Warranty 
Function: The start date for the extended warranty
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <inlineHelpText>The start date for the extended warranty</inlineHelpText>
        <label>Warranty Extended Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Warranty_ID__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Warranty  
Function: ID of warranty in CRM
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <displayFormat>{0000}</displayFormat>
        <inlineHelpText>ID of warranty in CRM</inlineHelpText>
        <label>Warranty ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Warranty_Max_Mileage__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Warranty 
Function: The maximum mileage for the warranty
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <inlineHelpText>The maximum mileage for the warranty</inlineHelpText>
        <label>Warranty Max Mileage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Warranty_Name__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Warranty 
Function: Name of the warranty
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Warranty Name</label>
        <picklist>
            <picklistValues>
                <fullName>0=Extended Warranty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Manufacturer Warranty</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Warranty_No__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Warranty 
Function: Warranty Number from DMS
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <inlineHelpText>Warranty Number from DMS</inlineHelpText>
        <label>Warranty No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Warranty_Status__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Warranty 
Function: The current status of the manufacturer&apos;s warranty
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <inlineHelpText>The current status of the manufacturer&apos;s warranty</inlineHelpText>
        <label>Warranty Status</label>
        <picklist>
            <picklistValues>
                <fullName>0=No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Warranty_Type__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Warranty 
Function: Type, e.g. if contractname is &quot;Extended warranty&quot;, then the contract type is &quot;EX&quot;
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Warranty Type</label>
        <picklist>
            <picklistValues>
                <fullName>0=EX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=MW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Warranty</label>
    <nameField>
        <label>Warranty Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Warranty</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>